# aln-system-update-orchestrator

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
aln/: system_update_integration_v1.7.aln  system_update_policy_v1.7.rego  system_update_policy_v1.7_test.rego
config/: postgres.toml  redis.toml
migrations/: 0001_create_aln_update_data.sql  0002_create_update_log_v1_7.sql
opa-tests/: system_update_suite.yaml
scripts/: dev-down.sh  dev-up.sh
src/: lib.rs  main.rs
src/aln/: ast.rs  lexer.rs  mod.rs  model.rs  parser.rs
src/db/: postgres.rs  redis.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/opa/: client.rs  mod.rs
src/orchestrator/: mod.rs  steps.rs
tests/: aln_parser_tests.rs
